<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/math_tutor_bg"
    tools:context="com.example.stephencordasco.mathtutor.RegisterActivity">

    <EditText
        android:id="@+id/reg_name_field"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:hint="@string/reg_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/reg_username_field"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/reg_name_field"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/reg_username"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/reg_password_field"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/reg_username_field"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <RelativeLayout
        android:id="@+id/reg_register_button_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/reg_password_field"
        android:layout_marginTop="60dp" >

        <Button
            android:id="@+id/reg_register_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/other_button"
            android:text="@string/register_button"
            android:textColor="@android:color/black"
            android:textSize="72sp" />

    </RelativeLayout>

</RelativeLayout>
