<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.stephencordasco.mathtutor.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/main_login_btn_layout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" >

        <Button
            android:id="@+id/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/other_button"
            android:text="@string/login_button"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/endurance_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/endurance_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_button_3"
            android:text="@string/main_endurance_button"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/test_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/endurance_btn_layout"
        android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/test_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_button"
            android:text="@string/test_button"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quiz_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/test_btn_layout"
        android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/main_quiz_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_button_4"
            android:text="@string/main_quiz_button"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/prac_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/quiz_btn_layout"
        android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/practiceBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_button_2"
            android:text="@string/main_practice_button"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/prac_btn_layout"
        android:layout_below="@id/main_login_btn_layout"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/math_tutor_main_img">

    </RelativeLayout>

</RelativeLayout>
