<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stephencordasco.mathtutor.PracticeSetUpActivity"
    android:background="@drawable/math_tutor_bg">

    <RelativeLayout
        android:id="@+id/confirm_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/begin_practice_btn"
            android:background="@drawable/other_button"
            android:textColor="@android:color/black"
            android:textSize="84sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/math_type_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/select_math_type"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/select_math_type"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/math_type_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_math_type"
            android:layout_toEndOf="@id/select_math_type"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/difficulty_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/math_type_layout"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/select_difficulty"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/select_difficulty"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/select_difficulty"
            android:layout_toEndOf="@id/select_difficulty"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_limit_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/difficulty_layout"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/time_limit"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/select_time_limit"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/time_limit_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/time_limit"
            android:layout_toEndOf="@id/time_limit"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/number_of_questions_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/time_limit_layout"
        android:layout_marginTop="50dp" >

        <TextView
            android:id="@+id/number_of_questions"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/select_num_of_questions"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/num_of_questions_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/number_of_questions"
            android:layout_toEndOf="@id/number_of_questions"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

</RelativeLayout>
